logo image problem fixed

--- a/receptionist copy/index.html
+++ b/receptionist copy/index.html
@@ -20,7 +20,7 @@
             <!-- Content For Sidebar -->
             <div class="h-100">
                 <div class="sidebar-logo">
-                    <img src="/NIELIT management system/Aditya -CMS/receptionist copy/image/PNG/NIELIT_M.png"
+                    <img src="image/PNG/NIELIT_L.png"
                         class="img-fluid illustration-img" alt="">
                 </div>
                 <ul class="sidebar-nav">
